# pkg/api/v1/task.pb.go
@@ -58,6 +58,37 @@ func (Task_Protocol) EnumDescriptor() ([]byte, []int) {
 	return fileDescriptor_ce5d8dd45b4a91ff, []int{0, 0}
 }
 
+type ReadAllRequest_Protocol int32
+
+const (
+	ReadAllRequest_TCP  ReadAllRequest_Protocol = 0
+	ReadAllRequest_HTTP ReadAllRequest_Protocol = 1
+	ReadAllRequest_GRPC ReadAllRequest_Protocol = 2
+	ReadAllRequest_UDP  ReadAllRequest_Protocol = 3
+)
+
+var ReadAllRequest_Protocol_name = map[int32]string{
+	0: "TCP",
+	1: "HTTP",
+	2: "GRPC",
+	3: "UDP",
+}
+
+var ReadAllRequest_Protocol_value = map[string]int32{
+	"TCP":  0,
+	"HTTP": 1,
+	"GRPC": 2,
+	"UDP":  3,
+}
+
+func (x ReadAllRequest_Protocol) String() string {
+	return proto.EnumName(ReadAllRequest_Protocol_name, int32(x))
+}
+
+func (ReadAllRequest_Protocol) EnumDescriptor() ([]byte, []int) {
+	return fileDescriptor_ce5d8dd45b4a91ff, []int{9, 0}
+}
+
 // Generic Interaction Task
 type Task struct {
 	// Unique integer identifier of the task
@@ -540,10 +571,12 @@ func (m *DeleteResponse) GetDeleted() int64 {
 // Request data to read all task
 type ReadAllRequest struct {
 	// API versioning: it is my best practice to specify version explicitly
-	Api                  string   `protobuf:"bytes,1,opt,name=api,proto3" json:"api,omitempty"`
-	XXX_NoUnkeyedLiteral struct{} `json:"-"`
-	XXX_unrecognized     []byte   `json:"-"`
-	XXX_sizecache        int32    `json:"-"`
+	Api string `protobuf:"bytes,1,opt,name=api,proto3" json:"api,omitempty"`
+	// type of task
+	Protocol             ReadAllRequest_Protocol `protobuf:"varint,2,opt,name=protocol,proto3,enum=v1.ReadAllRequest_Protocol" json:"protocol,omitempty"`
+	XXX_NoUnkeyedLiteral struct{}                `json:"-"`
+	XXX_unrecognized     []byte                  `json:"-"`
+	XXX_sizecache        int32                   `json:"-"`
 }
 
 func (m *ReadAllRequest) Reset()         { *m = ReadAllRequest{} }
@@ -576,6 +609,13 @@ func (m *ReadAllRequest) GetApi() string {
 		return m.Api
 	}
 	return ""
+}
+
+func (m *ReadAllRequest) GetProtocol() ReadAllRequest_Protocol {
+	if m != nil {
+		return m.Protocol
+	}
+	return ReadAllRequest_TCP
 }
 
 // Contains list of all tasks
@@ -630,6 +670,7 @@ func (m *ReadAllResponse) GetTask() []*Task {
 
 func init() {
 	proto.RegisterEnum("v1.Task_Protocol", Task_Protocol_name, Task_Protocol_value)
+	proto.RegisterEnum("v1.ReadAllRequest_Protocol", ReadAllRequest_Protocol_name, ReadAllRequest_Protocol_value)
 	proto.RegisterType((*Task)(nil), "v1.Task")
 	proto.RegisterType((*CreateRequest)(nil), "v1.CreateRequest")
 	proto.RegisterType((*CreateResponse)(nil), "v1.CreateResponse")
@@ -646,53 +687,54 @@ func init() {
 func init() { proto.RegisterFile("task.proto", fileDescriptor_ce5d8dd45b4a91ff) }
 
 var fileDescriptor_ce5d8dd45b4a91ff = []byte{
-	// 726 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xa4, 0x54, 0xcd, 0x4e, 0xdb, 0x58,
-	0x14, 0x1e, 0xdb, 0x21, 0x09, 0x27, 0x3f, 0x64, 0x2e, 0xcc, 0x4c, 0x14, 0x21, 0x8d, 0xe5, 0x55,
-	0x14, 0x0d, 0x76, 0xe2, 0x41, 0x2c, 0x52, 0x54, 0xa0, 0xa0, 0x96, 0x65, 0xe4, 0x86, 0x4d, 0xa5,
-	0x2e, 0x1c, 0xfb, 0xd4, 0xb9, 0xe0, 0xf8, 0xba, 0xf6, 0x4d, 0x68, 0x55, 0xb1, 0xe9, 0x13, 0x54,
-	0xed, 0xae, 0xaf, 0xd3, 0x45, 0x1f, 0xa0, 0xaf, 0x50, 0xa9, 0xaf, 0x51, 0xf9, 0xda, 0x0e, 0x18,
-	0x08, 0xaa, 0xd4, 0x55, 0x7c, 0xcf, 0xfd, 0xce, 0xf7, 0x7d, 0xe7, 0x27, 0x17, 0x80, 0xdb, 0xf1,
-	0x85, 0x1e, 0x46, 0x8c, 0x33, 0x22, 0x2f, 0x06, 0x9d, 0x7f, 0x3d, 0xc6, 0x3c, 0x1f, 0x0d, 0x11,
-	0x99, 0xcc, 0x5f, 0x19, 0x9c, 0xce, 0x30, 0xe6, 0xf6, 0x2c, 0x4c, 0x41, 0x9d, 0xed, 0x0c, 0x60,
-	0x87, 0xd4, 0xb0, 0x83, 0x80, 0x71, 0x9b, 0x53, 0x16, 0xc4, 0xd9, 0xed, 0x7f, 0xe2, 0xc7, 0xd9,
-	0xf1, 0x30, 0xd8, 0x89, 0x2f, 0x6d, 0xcf, 0xc3, 0xc8, 0x60, 0xa1, 0x40, 0xdc, 0x45, 0x6b, 0x3f,
-	0x24, 0x28, 0x8d, 0xed, 0xf8, 0x82, 0x34, 0x41, 0xa6, 0x6e, 0x5b, 0x52, 0xa5, 0xae, 0x62, 0xc9,
-	0xd4, 0x25, 0x5b, 0xb0, 0xc6, 0x29, 0xf7, 0xb1, 0x2d, 0xab, 0x52, 0x77, 0xdd, 0x4a, 0x0f, 0x44,
-	0x85, 0x9a, 0x8b, 0xb1, 0x13, 0x51, 0x41, 0xd8, 0x56, 0xc4, 0xdd, 0xcd, 0x10, 0xd9, 0x81, 0x6a,
-	0x6a, 0x80, 0xf9, 0xed, 0x92, 0x2a, 0x75, 0x9b, 0xe6, 0x9f, 0xfa, 0x62, 0xa0, 0x27, 0x1a, 0xfa,
-	0x28, 0xbb, 0xb0, 0x96, 0x10, 0xb2, 0x07, 0xd5, 0x08, 0x67, 0x34, 0x70, 0x31, 0x6a, 0xaf, 0xa9,
-	0x52, 0xb7, 0x66, 0x76, 0xf4, 0xb4, 0x3c, 0x3d, 0xaf, 0x5f, 0x1f, 0xe7, 0xf5, 0x5b, 0x4b, 0xac,
-	0xd6, 0x87, 0x6a, 0xce, 0x46, 0x2a, 0xa0, 0x8c, 0x8f, 0x47, 0xad, 0x3f, 0x48, 0x15, 0x4a, 0xa7,
-	0xe3, 0xf1, 0xa8, 0x25, 0x25, 0x5f, 0xcf, 0xac, 0xd1, 0x71, 0x4b, 0x4e, 0x2e, 0xcf, 0x4e, 0x46,
-	0x2d, 0x45, 0x3b, 0x80, 0xc6, 0x71, 0x84, 0x36, 0x47, 0x0b, 0x5f, 0xcf, 0x31, 0xe6, 0xa4, 0x05,
-	0x8a, 0x1d, 0x52, 0x51, 0xf2, 0xba, 0x95, 0x7c, 0x92, 0x6d, 0x28, 0x25, 0xb3, 0x10, 0x25, 0xd7,
-	0xcc, 0x6a, 0xee, 0xdb, 0x12, 0x51, 0xcd, 0x84, 0x66, 0x4e, 0x10, 0x87, 0x2c, 0x88, 0xf1, 0x1e,
-	0x86, 0xb4, 0x8b, 0x72, 0xde, 0x45, 0xcd, 0x80, 0x9a, 0x85, 0xb6, 0xbb, 0x5a, 0xf2, 0x76, 0xc2,
-	0x63, 0xa8, 0xa7, 0x09, 0x2b, 0x25, 0x1e, 0x36, 0x79, 0x00, 0x8d, 0xb3, 0xd0, 0xfd, 0x8d, 0x2a,
-	0xf7, 0xa1, 0x99, 0x13, 0xac, 0xb4, 0xd0, 0x86, 0xca, 0x5c, 0x60, 0x72, 0xe7, 0xf9, 0x51, 0x1b,
-	0x40, 0xe3, 0x04, 0x7d, 0x7c, 0x48, 0xfe, 0x76, 0xc5, 0xfb, 0xd0, 0xcc, 0x53, 0x1e, 0x12, 0x74,
-	0x05, 0x66, 0x29, 0x98, 0x1d, 0x35, 0x0d, 0x9a, 0x49, 0xbf, 0x8e, 0x7c, 0x7f, 0xa5, 0xa2, 0x76,
-	0x04, 0x1b, 0x4b, 0xcc, 0x2f, 0xb4, 0x55, 0xb9, 0xdb, 0x15, 0xf3, 0x83, 0x02, 0xb5, 0xe4, 0xf8,
-	0x1c, 0xa3, 0x05, 0x75, 0x90, 0x9c, 0x42, 0x25, 0xa3, 0x24, 0x24, 0x81, 0x16, 0x3d, 0x74, 0x36,
-	0x0b, 0xb1, 0x54, 0x53, 0xdb, 0x7a, 0xff, 0xed, 0xfb, 0x27, 0xb9, 0x49, 0xea, 0xc6, 0x62, 0x60,
-	0x24, 0xac, 0x86, 0xed, 0xfb, 0xe4, 0x04, 0xca, 0xe9, 0x56, 0x11, 0xf1, 0x3f, 0x29, 0xac, 0x68,
-	0x87, 0xdc, 0x0c, 0x65, 0x34, 0x9b, 0x82, 0xa6, 0xa1, 0x55, 0x73, 0x9a, 0xa1, 0xd4, 0x23, 0x87,
-	0x50, 0x4a, 0xe4, 0xc8, 0x46, 0x2e, 0x9c, 0x33, 0xb4, 0xae, 0x03, 0x59, 0xfe, 0x5f, 0x22, 0x7f,
-	0x83, 0x34, 0x96, 0x36, 0xde, 0x51, 0xf7, 0x8a, 0x78, 0x50, 0x4e, 0xe7, 0x9e, 0xfa, 0x28, 0x2c,
-	0x51, 0xea, 0xa3, 0xb8, 0x16, 0xda, 0x9e, 0xe0, 0xe9, 0x77, 0xc8, 0x35, 0x8f, 0x78, 0xc8, 0xa8,
-	0x7b, 0x35, 0x94, 0x7a, 0x2f, 0xfe, 0x31, 0xef, 0xbf, 0x20, 0x4f, 0xa1, 0x9c, 0xce, 0x3b, 0x15,
-	0x2a, 0xac, 0x4b, 0x2a, 0x54, 0x5c, 0x87, 0xdc, 0x70, 0xaf, 0x68, 0xf8, 0xc9, 0x57, 0xe9, 0xe3,
-	0xd1, 0x17, 0x89, 0xbc, 0x84, 0x7a, 0x32, 0x18, 0x35, 0x9b, 0x8c, 0x76, 0x0a, 0x75, 0x74, 0xa6,
-	0x4c, 0x0d, 0x23, 0x76, 0x8e, 0x0e, 0x27, 0xea, 0x94, 0xf3, 0x30, 0x1e, 0x1a, 0x86, 0x47, 0xf9,
-	0x74, 0x3e, 0xd1, 0x1d, 0x36, 0x33, 0x1c, 0xb6, 0xb0, 0x23, 0xca, 0xdf, 0x1a, 0x09, 0xb2, 0xf3,
-	0xf7, 0x04, 0x03, 0x1d, 0x27, 0xf1, 0x25, 0x8b, 0xf8, 0xf4, 0xd0, 0x9b, 0xd9, 0xd4, 0x4f, 0x50,
-	0xa6, 0x32, 0xd0, 0xfb, 0x3d, 0x49, 0x32, 0x5b, 0x76, 0x18, 0xfa, 0xd4, 0x11, 0xcf, 0xa6, 0x71,
-	0x1e, 0xb3, 0x60, 0x78, 0x27, 0x62, 0x3d, 0x02, 0x65, 0xb7, 0xbf, 0x4b, 0x76, 0xa1, 0x67, 0x21,
-	0x9f, 0x47, 0x01, 0xba, 0xea, 0xe5, 0x14, 0x03, 0x95, 0x4f, 0x51, 0x8d, 0x30, 0x66, 0xf3, 0xc8,
-	0x41, 0xd5, 0x65, 0x18, 0xab, 0x01, 0xe3, 0x2a, 0xbe, 0xa1, 0x31, 0xd7, 0x49, 0x19, 0x4a, 0x9f,
-	0x65, 0xa9, 0x32, 0x29, 0x8b, 0x97, 0xee, 0xff, 0x9f, 0x01, 0x00, 0x00, 0xff, 0xff, 0xb4, 0xe1,
-	0xc9, 0x85, 0x09, 0x06, 0x00, 0x00,
+	// 742 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xa4, 0x54, 0xcd, 0x6e, 0xd3, 0x4a,
+	0x18, 0xbd, 0xb6, 0xd3, 0x24, 0xfd, 0xf2, 0xd3, 0xdc, 0x69, 0xef, 0x25, 0x0a, 0x95, 0xb0, 0xbc,
+	0x8a, 0x22, 0x6a, 0x27, 0xa6, 0x2a, 0x52, 0xa8, 0x68, 0x4b, 0x2b, 0xe8, 0x32, 0x32, 0xe9, 0x06,
+	0x89, 0x85, 0x63, 0x0f, 0xce, 0xb4, 0x8e, 0xc7, 0x78, 0x26, 0x29, 0x08, 0x75, 0xc3, 0x1e, 0x09,
+	0xc1, 0x8e, 0xd7, 0x61, 0xc1, 0x03, 0xf0, 0x0a, 0x48, 0xbc, 0x06, 0xf2, 0xd8, 0x4e, 0xeb, 0xa6,
+	0xa9, 0x10, 0xac, 0xec, 0xf9, 0xe6, 0x7c, 0xe7, 0x9c, 0x6f, 0xe6, 0xd8, 0x00, 0xdc, 0x66, 0x67,
+	0x7a, 0x18, 0x51, 0x4e, 0x91, 0x3c, 0xeb, 0xb5, 0xee, 0x79, 0x94, 0x7a, 0x3e, 0x36, 0x44, 0x65,
+	0x34, 0x7d, 0x65, 0x70, 0x32, 0xc1, 0x8c, 0xdb, 0x93, 0x30, 0x01, 0xb5, 0x36, 0x53, 0x80, 0x1d,
+	0x12, 0xc3, 0x0e, 0x02, 0xca, 0x6d, 0x4e, 0x68, 0xc0, 0xd2, 0xdd, 0xfb, 0xe2, 0xe1, 0x6c, 0x79,
+	0x38, 0xd8, 0x62, 0xe7, 0xb6, 0xe7, 0xe1, 0xc8, 0xa0, 0xa1, 0x40, 0x2c, 0xa2, 0xb5, 0x9f, 0x12,
+	0x14, 0x86, 0x36, 0x3b, 0x43, 0x75, 0x90, 0x89, 0xdb, 0x94, 0x54, 0xa9, 0xad, 0x58, 0x32, 0x71,
+	0xd1, 0x06, 0xac, 0x70, 0xc2, 0x7d, 0xdc, 0x94, 0x55, 0xa9, 0xbd, 0x6a, 0x25, 0x0b, 0xa4, 0x42,
+	0xc5, 0xc5, 0xcc, 0x89, 0x88, 0x20, 0x6c, 0x2a, 0x62, 0xef, 0x6a, 0x09, 0x6d, 0x41, 0x39, 0x31,
+	0x40, 0xfd, 0x66, 0x41, 0x95, 0xda, 0x75, 0xf3, 0x5f, 0x7d, 0xd6, 0xd3, 0x63, 0x0d, 0x7d, 0x90,
+	0x6e, 0x58, 0x73, 0x08, 0xda, 0x81, 0x72, 0x84, 0x27, 0x24, 0x70, 0x71, 0xd4, 0x5c, 0x51, 0xa5,
+	0x76, 0xc5, 0x6c, 0xe9, 0xc9, 0x78, 0x7a, 0x36, 0xbf, 0x3e, 0xcc, 0xe6, 0xb7, 0xe6, 0x58, 0xad,
+	0x0b, 0xe5, 0x8c, 0x0d, 0x95, 0x40, 0x19, 0x1e, 0x0e, 0x1a, 0xff, 0xa0, 0x32, 0x14, 0x8e, 0x87,
+	0xc3, 0x41, 0x43, 0x8a, 0xdf, 0x9e, 0x59, 0x83, 0xc3, 0x86, 0x1c, 0x6f, 0x9e, 0x1c, 0x0d, 0x1a,
+	0x8a, 0xb6, 0x07, 0xb5, 0xc3, 0x08, 0xdb, 0x1c, 0x5b, 0xf8, 0xf5, 0x14, 0x33, 0x8e, 0x1a, 0xa0,
+	0xd8, 0x21, 0x11, 0x23, 0xaf, 0x5a, 0xf1, 0x2b, 0xda, 0x84, 0x42, 0x7c, 0x17, 0x62, 0xe4, 0x8a,
+	0x59, 0xce, 0x7c, 0x5b, 0xa2, 0xaa, 0x99, 0x50, 0xcf, 0x08, 0x58, 0x48, 0x03, 0x86, 0x6f, 0x60,
+	0x48, 0x4e, 0x51, 0xce, 0x4e, 0x51, 0x33, 0xa0, 0x62, 0x61, 0xdb, 0x5d, 0x2e, 0x79, 0xbd, 0xe1,
+	0x31, 0x54, 0x93, 0x86, 0xa5, 0x12, 0xb7, 0x9b, 0xdc, 0x83, 0xda, 0x49, 0xe8, 0xfe, 0xc5, 0x94,
+	0xbb, 0x50, 0xcf, 0x08, 0x96, 0x5a, 0x68, 0x42, 0x69, 0x2a, 0x30, 0x99, 0xf3, 0x6c, 0xa9, 0xf5,
+	0xa0, 0x76, 0x84, 0x7d, 0x7c, 0x9b, 0xfc, 0xf5, 0x89, 0x77, 0xa1, 0x9e, 0xb5, 0xdc, 0x26, 0xe8,
+	0x0a, 0xcc, 0x5c, 0x30, 0x5d, 0x6a, 0x1f, 0x24, 0xa8, 0xc7, 0x07, 0x76, 0xe0, 0xfb, 0xcb, 0x25,
+	0x1f, 0x5e, 0xc9, 0xa4, 0x2c, 0x32, 0x79, 0x37, 0x9e, 0x3a, 0xdf, 0x77, 0x43, 0x3a, 0xff, 0x20,
+	0x65, 0x07, 0xb0, 0x36, 0xa7, 0xfd, 0x8d, 0x2b, 0x54, 0x16, 0x6f, 0xc0, 0xfc, 0xa8, 0x40, 0x25,
+	0x5e, 0x3e, 0xc7, 0xd1, 0x8c, 0x38, 0x18, 0x1d, 0x43, 0x29, 0xa5, 0x44, 0x68, 0xd1, 0x76, 0x6b,
+	0x3d, 0x57, 0x4b, 0x34, 0xb5, 0x8d, 0xf7, 0xdf, 0x7f, 0x7c, 0x96, 0xeb, 0xa8, 0x6a, 0xcc, 0x7a,
+	0x46, 0xcc, 0x6a, 0xd8, 0xbe, 0x8f, 0x8e, 0xa0, 0x98, 0x24, 0x18, 0x89, 0x6f, 0x32, 0xf7, 0x39,
+	0xb4, 0xd0, 0xd5, 0x52, 0x4a, 0xb3, 0x2e, 0x68, 0x6a, 0x5a, 0x39, 0xa3, 0xe9, 0x4b, 0x1d, 0xb4,
+	0x0f, 0x85, 0x58, 0x0e, 0xad, 0x65, 0xc2, 0x19, 0x43, 0xe3, 0xb2, 0x90, 0xf6, 0xff, 0x27, 0xfa,
+	0xd7, 0x50, 0x6d, 0x6e, 0xe3, 0x1d, 0x71, 0x2f, 0x90, 0x07, 0xc5, 0x24, 0x63, 0x89, 0x8f, 0x5c,
+	0x60, 0x13, 0x1f, 0xf9, 0x08, 0x6a, 0x3b, 0x82, 0xa7, 0xdb, 0x42, 0x97, 0x3c, 0xe2, 0xa7, 0x49,
+	0xdc, 0x8b, 0xbe, 0xd4, 0x79, 0x71, 0xc7, 0xbc, 0x79, 0x03, 0x3d, 0x85, 0x62, 0x92, 0xad, 0x44,
+	0x28, 0x17, 0xcd, 0x44, 0x28, 0x1f, 0xbd, 0xcc, 0x70, 0x27, 0x6f, 0xf8, 0xc9, 0x37, 0xe9, 0xd3,
+	0xc1, 0x57, 0x09, 0xbd, 0x84, 0x6a, 0x7c, 0x31, 0x6a, 0x7a, 0x33, 0xda, 0x31, 0x54, 0xb1, 0x33,
+	0xa6, 0x6a, 0x18, 0xd1, 0x53, 0xec, 0x70, 0xa4, 0x8e, 0x39, 0x0f, 0x59, 0xdf, 0x30, 0x3c, 0xc2,
+	0xc7, 0xd3, 0x91, 0xee, 0xd0, 0x89, 0xe1, 0xd0, 0x99, 0x1d, 0x11, 0xfe, 0xd6, 0x88, 0x91, 0xad,
+	0xff, 0x47, 0x38, 0xd0, 0xf1, 0x88, 0x9d, 0xd3, 0x88, 0x8f, 0xf7, 0xbd, 0x89, 0x4d, 0xfc, 0x18,
+	0x65, 0x2a, 0x3d, 0xbd, 0xdb, 0x91, 0x24, 0xb3, 0x61, 0x87, 0xa1, 0x4f, 0x1c, 0xf1, 0x8b, 0x36,
+	0x4e, 0x19, 0x0d, 0xfa, 0x0b, 0x15, 0xeb, 0x11, 0x28, 0xdb, 0xdd, 0x6d, 0xb4, 0x0d, 0x1d, 0x0b,
+	0xf3, 0x69, 0x14, 0x60, 0x57, 0x3d, 0x1f, 0xe3, 0x40, 0xe5, 0x63, 0xac, 0x46, 0x98, 0xd1, 0x69,
+	0xe4, 0x60, 0xd5, 0xa5, 0x98, 0xa9, 0x01, 0xe5, 0x2a, 0x7e, 0x43, 0x18, 0xd7, 0x51, 0x11, 0x0a,
+	0x5f, 0x64, 0xa9, 0x34, 0x2a, 0x8a, 0x6c, 0x3f, 0xf8, 0x15, 0x00, 0x00, 0xff, 0xff, 0x31, 0x5b,
+	0xeb, 0x01, 0x75, 0x06, 0x00, 0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
